# SXJ-automation-demo

./: README.md  bash.exe.stackdump  pyproject.toml
API_test/: api_demom.py  api_test.py
API_test/conf/: conf.ini
API_test/test_cases/: demo_api.yaml  test_api.py
API_test/utils/: initoyaml.py
XMind/: xmind.py
cases/: test_app_enterprise.py  test_app_personal.py  test_draft_home.py  test_pre_audit.py  test_sub_sign_process.py  test_subscription.py  xmind_To_CSV.py
core/: basepage.py
data/: cookie.ini  data.ini  path_config.py  pre_cookie.ini  xmind.ini
docs/: ARCHITECTURE.md
page_object/: approve_order.py  draft_demologin.py  pre_audit.py  request_pay.py  sign_order.py  sign_process.py  submit_order.py  subscription_app.py
public/utils/: HTMLTestRunnerNew.py  cookie_to_yaml.py  get_cookie.py  get_phone_code.py  get_preaudit_url.py  readini.py  userData_test.py
test/: DEMO_Home.py  test.yaml
